# libtt

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  Cargo.toml  MODULE.bazel  README.md  build.rs  latest-coldstart-timing-run.txt  requirements-jax-tests.txt  tt-deps
bazel/: cc_embed_data.S.tpl  cc_embed_data.bzl  cc_embed_data.h.tpl  libtt_pjrt_exports.lds  llvm_configure_repo.bzl
cpp/: libtt_pjrt.cc  libtt_pjrt.h  libtt_pjrt_test.cc  libtt_rust_ffi.h  pjrt_buffer.cc  pjrt_buffer.h  pjrt_internal.h  tt_metal_host_runtime.cc  tt_metal_host_tensor_test.cc  tt_metal_matmul_runtime.cc  tt_metal_matmul_runtime.h  tt_metal_overlay_anchor.cc  tt_metal_runtime.cc  tt_metal_runtime.h  tt_metal_runtime_auto_setup.cc  tt_metal_runtime_root.cc  tt_metal_runtime_root.h  tt_xla_pjrt_entrypoint.cc  ttnn_tensor_test.cc
docs/design/: general_fusion.md
docs/libtt-optimization-report/: Makefile  README.md  analyze.py  benchmark_upstream.py  report.html  report.md  report.tex  style.css
docs/libtt-optimization-report/data/: current-kernel-manifest.json  current-kernel-samples.csv  current-kernel-summary.csv  down-projection-profile-summary.csv  foundation-ablation-manifest.json  foundation-ablation-samples.csv  foundation-ablation-summary.csv  latest-main-manifest.json  latest-main-streaming-samples.csv  latest-main-streaming-summary.csv  samples.csv  summary.csv  upstream-tt-inference-manifest.json  upstream-tt-inference-samples.csv  upstream-tt-inference-summary.csv
examples/: feedforward.py  matmul_peak.py  pjrt_identity.cc  qwen3.py
firmware/: brisc.cc  ncrisc.cc  trisc.cc
firmware/cq/: cq_commands.hpp  cq_common.hpp  cq_dispatch.cpp  cq_dispatch_subordinate.cpp  cq_fixed_config.hpp  cq_prefetch.cpp  cq_relay.hpp
kernels/: add_compute.cc  add_reader.cc  add_writer.cc  argmax_writer.cc  binary_eltwise_reader.cc  bitwise_binary_reader.cc  bitwise_reduce_lastdim_reader.cc  broadcast_compute.cc  broadcast_generic_reader.cc  broadcast_last_dim_reader.cc  broadcast_prefix_tile_reader.cc  broadcast_reader.cc  broadcast_vector_to_column.cc  broadcast_writer.cc  compare_compute.cc  compare_float_compute.cc  compare_int32_compute.cc  concatenate_reader.cc  constant_writer.cc  divide_compute.cc  dot_general_reader.cc  dpa_common.cc  dpa_reduce_reader.cc  dpa_reduce_writer.cc  dpa_score_reader.cc  dpa_value_reader.cc  dpa_value_writer.cc  dynamic_update_slice_reader.cc  fused_eltwise_compute.cc  gather_dim0_reader.cc  gather_rank1_reader.cc  gather_reader.cc  gather_writer.cc  iota_writer.cc  matmul_common.cc  matmul_compute.cc  matmul_contiguous_reader_sender.cc  matmul_contiguous_writer_sender.cc  matmul_f32_reader.cc  matmul_lm_head_top1_writer_sender.cc  (+60 more)
kernels/fused_eltwise_helpers/: add_input.cc.inc  binary_input_data_format.cc.inc  compare.cc.inc  multiply_input.cc.inc  subtract_input.cc.inc
mlir/: CMakeLists.txt  executable.proto  gqa_matmul_fusing_pattern.cc  gqa_matmul_fusing_pattern.h  mlir_frontend.cc  rms_norm_fusing_pattern.cc  rms_norm_fusing_pattern.h  rope_fusing_pattern.cc  rope_fusing_pattern.h  sdpa_fusing_pattern.cc  sdpa_fusing_pattern.h  select_splat_fusing_pattern.cc  select_splat_fusing_pattern.h  stablehlo_utils.h  tt_executable.proto  tt_mlir_frontend.cc
scripts/: setup_deps.sh  setup_deps_common.sh  setup_deps_llvm.sh
src/: bazel_bridge.rs  compiler.rs  cq.rs  cq_bindings.rs  device.rs  dispatch.rs  dram.rs  executable.rs  hw.rs  lib.rs  log.rs  mlir_frontend.rs  pjrt_bindings.rs  profile.rs  sysmem.rs  tt_executable.rs  utils.rs
src/device/: linux.rs  stub.rs
src/dram/: linux.rs  stub.rs
src/kernels/: add.rs  argmax.rs  binary_eltwise.rs  bitwise.rs  bitwise_reduce.rs  broadcast.rs  cache.rs  concatenate.rs  constant.rs  dot_general.rs  dynamic_update_slice.rs  fused_eltwise.rs  gather.rs  iota.rs  kernel.rs  matmul.rs  matmul_ws.rs  max.rs  mod.rs  pad.rs  reduce.rs  reduce_window.rs  repeat.rs  reshape.rs  reshape_view.rs  rope.rs  rotary.rs  scatter.rs  sdpa_decode.rs  select.rs  slice.rs  swiglu.rs  take.rs  topk.rs  transpose.rs  unary_eltwise.rs
src/linux/: imp.rs  mod.rs  stub.rs
tests/: BUILD.bazel  jax_test_suite.py
xtask/: Cargo.toml
xtask/src/: main.rs
