load("@com_google_protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")
load("@com_google_protobuf//bazel:proto_library.bzl", "proto_library")
load("@rules_cc//cc:defs.bzl", "cc_library", "cc_shared_library", "cc_test")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "executable_proto",
    srcs = ["mlir/executable.proto"],
)

cc_proto_library(
    name = "executable_cc_proto",
    deps = [":executable_proto"],
)

cc_library(
    name = "mlir_frontend",
    srcs = [
        "mlir/mlir_frontend.cc",
        "mlir/rms_norm_fusing_pattern.cc",
        "mlir/rope_fusing_pattern.cc",
        "mlir/sdpa_fusing_pattern.cc",
    ],
    hdrs = [
        "mlir/rms_norm_fusing_pattern.h",
        "mlir/rope_fusing_pattern.h",
        "mlir/sdpa_fusing_pattern.h",
        "mlir/stablehlo_utils.h",
    ],
    copts = ["-std=c++17"],
    deps = [
        ":executable_cc_proto",
        "@com_google_protobuf//:protobuf_lite",
        "@llvm-project//llvm:Support",
        "@llvm-project//mlir:FuncExtensions",
        "@llvm-project//mlir:FuncDialect",
        "@llvm-project//mlir:IR",
        "@llvm-project//mlir:Parser",
        "@llvm-project//mlir:Pass",
        "@llvm-project//mlir:Support",
        "@llvm-project//mlir:Transforms",
        "@stablehlo//:stablehlo_ops",
        "@stablehlo//:stablehlo_serialization",
        "@stablehlo//:vhlo_ops",
    ],
)

cc_library(
    name = "tt_pjrt",
    srcs = ["cpp/libtt_pjrt.cc"],
    hdrs = [
        "cpp/libtt_pjrt.h",
        "third_party/openxla/xla/pjrt/c/pjrt_c_api.h",
    ],
    copts = ["-std=c++20"],
    includes = ["third_party/openxla"],
    deps = [
        ":executable_cc_proto",
        ":mlir_frontend",
        ":tt_pjrt_buffer",
        "@com_google_protobuf//:protobuf_lite",
    ],
    linkstatic = True,
)

cc_library(
    name = "tt_pjrt_buffer",
    srcs = ["cpp/pjrt_buffer.cc"],
    hdrs = [
        "cpp/pjrt_buffer.h",
        "cpp/pjrt_internal.h",
        "third_party/openxla/xla/pjrt/c/pjrt_c_api.h",
    ],
    copts = ["-std=c++20"],
    includes = ["third_party/openxla"],
    deps = [":tt_metal_host_tensor"],
    linkstatic = True,
)

cc_library(
    name = "tt_metal_host_tensor",
    deps = [
        "@tt_metal//:tt_metal_host_tensor_runtime_support_upstream",
        "@tt_metal//:tt_metal_host_tensor_upstream",
    ],
    linkstatic = True,
)

cc_shared_library(
    name = "tt_shared",
    deps = [
        ":tt_pjrt",
    ],
    shared_lib_name = select({
        "@platforms//os:macos": "libtt.dylib",
        "//conditions:default": "libtt.so",
    }),
)

cc_test(
    name = "tt_pjrt_smoke_test",
    srcs = ["cpp/libtt_pjrt_test.cc"],
    copts = ["-std=c++20"],
    deps = [":tt_pjrt"],
)

cc_test(
    name = "tt_metal_host_tensor_test",
    srcs = ["cpp/tt_metal_host_tensor_test.cc"],
    copts = ["-std=c++20"],
    deps = [":tt_metal_host_tensor"],
)

alias(
    name = "tt",
    actual = ":tt_shared",
)
