load("@rules_cc//cc:defs.bzl", "cc_library", "cc_shared_library")

package(default_visibility = ["//visibility:public"])

exports_files([
    "bazel/cc_embed_data.S.tpl",
    "bazel/cc_embed_data.h.tpl",
    "bazel/libtt_pjrt_exports.lds",
])

cc_library(
    name = "tt_metal_runtime_root",
    srcs = [
        "cpp/tt_metal_runtime_root.cc",
    ],
    hdrs = [
        "cpp/tt_metal_runtime_root.h",
    ],
    copts = ["-std=c++20"],
    deps = [
        "@tt_metal//:tt_metal_runtime_embedded",
        "@libarchive//:archive",
    ],
    linkstatic = True,
)

cc_library(
    name = "tt_metal_runtime_auto_setup",
    srcs = ["cpp/tt_metal_runtime_auto_setup.cc"],
    copts = ["-std=c++20"],
    deps = [":tt_metal_runtime_root"],
    alwayslink = True,
)

cc_library(
    name = "tt_xla_pjrt_plugin",
    srcs = ["cpp/tt_xla_pjrt_entrypoint.cc"],
    copts = [
        "-std=c++20",
        "-fno-rtti",
    ],
    deps = [
        "@tt_xla_src//:pjrt_bindings",
        "@tt_xla_src//:pjrt_headers",
    ],
    alwayslink = True,
)

cc_shared_library(
    name = "tt_shared",
    additional_linker_inputs = select({
        "@platforms//os:linux": ["bazel/libtt_pjrt_exports.lds"],
        "//conditions:default": [],
    }),
    deps = [
        ":tt_metal_runtime_auto_setup",
        ":tt_xla_pjrt_plugin",
    ],
    shared_lib_name = select({
        "@platforms//os:macos": "libtt.dylib",
        "//conditions:default": "libtt.so",
    }),
    user_link_flags = select({
        "@platforms//os:linux": [
            "-Wl,--exclude-libs,ALL",
            "-Wl,--version-script,$(location bazel/libtt_pjrt_exports.lds)",
        ],
        "//conditions:default": [],
    }),
)

filegroup(
    name = "tt",
    srcs = [
        ":tt_shared",
    ],
)
