module(name = "libtt", version = "0.1.0")

bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "protobuf", version = "33.4", repo_name = "com_google_protobuf")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "rules_python", version = "1.7.0")
bazel_dep(name = "rules_shell", version = "0.6.1")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "tt_metal",
    build_file = "//third_party/tt_metal:BUILD.overlay.bazel",
    sha256 = "b4d05d0e498e626a0d5455f5c6a379aa1b7ac4f1ca76f8f72dad4f7370223bf7",
    strip_prefix = "tt-metal-16e79a784996b0608f809a186f5816dd07e86d39",
    urls = [
        "https://github.com/tenstorrent/tt-metal/archive/16e79a784996b0608f809a186f5816dd07e86d39.tar.gz",
    ],
)

http_archive(
    name = "llvm-raw",
    build_file_content = "# empty\n",
    sha256 = "75dba7f15864c9ddc25dd621dcaf2d325a9ca8f23957ff4eb6b01df5b493b5d5",
    strip_prefix = "llvm-project-f6d0a512972a74ef100723b9526a6a0ddb23f894",
    urls = [
        "https://storage.googleapis.com/mirror.tensorflow.org/github.com/llvm/llvm-project/archive/f6d0a512972a74ef100723b9526a6a0ddb23f894.tar.gz",
        "https://github.com/llvm/llvm-project/archive/f6d0a512972a74ef100723b9526a6a0ddb23f894.tar.gz",
    ],
)

http_archive(
    name = "llvm_zlib",
    build_file = "@llvm-raw//utils/bazel/third_party_build:zlib-ng.BUILD",
    sha256 = "e36bb346c00472a1f9ff2a0a4643e590a254be6379da7cddd9daeb9a7f296731",
    strip_prefix = "zlib-ng-2.0.7",
    urls = [
        "https://github.com/zlib-ng/zlib-ng/archive/refs/tags/2.0.7.zip",
    ],
)

http_archive(
    name = "llvm_zstd",
    build_file = "@llvm-raw//utils/bazel/third_party_build:zstd.BUILD",
    sha256 = "7c42d56fac126929a6a85dbc73ff1db2411d04f104fae9bdea51305663a83fd0",
    strip_prefix = "zstd-1.5.2",
    urls = [
        "https://github.com/facebook/zstd/releases/download/v1.5.2/zstd-1.5.2.tar.gz",
    ],
)

http_archive(
    name = "stablehlo",
    sha256 = "3780e503599ebcc1acc4c96ea5f23c724dae2a4d746ed7d9a01d3f14d879265a",
    strip_prefix = "stablehlo-127d2f238010589ac96f2f402a27afc9dccbb7ab",
    urls = [
        "https://github.com/openxla/stablehlo/archive/127d2f238010589ac96f2f402a27afc9dccbb7ab.zip",
    ],
)

llvm_configure = use_repo_rule("//:bazel/llvm_configure_repo.bzl", "llvm_configure")

llvm_configure(
    name = "llvm-project",
)
