module(name = "libtt", version = "0.1.0")

bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "protobuf", version = "33.4", repo_name = "com_google_protobuf")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "rules_pkg", version = "1.2.0")
bazel_dep(name = "rules_python", version = "1.7.0")
bazel_dep(name = "rules_shell", version = "0.6.1")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
git_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

http_archive(
    name = "libarchive",
    build_file = "//third_party/libarchive:BUILD.overlay.bazel",
    patch_strip = 1,
    patches = ["//third_party/libarchive:add_bazel_config.patch"],
    sha256 = "19f917d42d530f98815ac824d90c7eaf648e9d9a50e4f309c812457ffa5496b5",
    strip_prefix = "libarchive-3.8.1",
    urls = [
        "https://github.com/libarchive/libarchive/releases/download/v3.8.1/libarchive-3.8.1.tar.xz",
    ],
)

http_archive(
    name = "blake3",
    build_file = "//third_party/blake3:BUILD.overlay.bazel",
    sha256 = "b5ee5f5c5e025eb2733ae3af8d4c0e53bb66dff35095decfd377f1083e8ac9be",
    strip_prefix = "BLAKE3-1.8.4",
    urls = [
        "https://github.com/BLAKE3-team/BLAKE3/archive/refs/tags/1.8.4.tar.gz",
    ],
)

http_archive(
    name = "enchantum",
    build_file = "//third_party/enchantum:BUILD.overlay.bazel",
    sha256 = "3b3e218706a786493af3949572428562cdbadd92a8a3bb8e1d4fc20fa39460c4",
    strip_prefix = "enchantum-8ca5b0eb7e7ebe0252e5bc6915083f1dd1b8294e",
    urls = [
        "https://github.com/ZXShady/enchantum/archive/8ca5b0eb7e7ebe0252e5bc6915083f1dd1b8294e.tar.gz",
    ],
)

http_archive(
    name = "fmt",
    build_file = "//third_party/fmt:BUILD.overlay.bazel",
    sha256 = "ac366b7b4c2e9f0dde63a59b3feb5ee59b67974b14ee5dc9ea8ad78aa2c1ee1e",
    strip_prefix = "fmt-11.1.4",
    urls = [
        "https://github.com/fmtlib/fmt/archive/refs/tags/11.1.4.tar.gz",
    ],
)

http_archive(
    name = "nlohmann_json",
    build_file = "//third_party/nlohmann_json:BUILD.overlay.bazel",
    sha256 = "0d8ef5af7f9794e3263480193c491549b2ba6cc74bb018906202ada498a79406",
    strip_prefix = "json-3.11.3",
    urls = [
        "https://github.com/nlohmann/json/archive/refs/tags/v3.11.3.tar.gz",
    ],
)

http_archive(
    name = "reflect",
    build_file = "//third_party/reflect:BUILD.overlay.bazel",
    sha256 = "2991391d326886a20522ee376c04dceb4ad200ffba909bbce9a4cbe655b61ab8",
    strip_prefix = "reflect-1.2.6",
    urls = [
        "https://github.com/boost-ext/reflect/archive/refs/tags/v1.2.6.tar.gz",
    ],
)

http_archive(
    name = "simde",
    build_file = "//third_party/simde:BUILD.overlay.bazel",
    sha256 = "ed2a3268658f2f2a9b5367628a85ccd4cf9516460ed8604eed369653d49b25fb",
    strip_prefix = "simde-0.8.2",
    urls = [
        "https://github.com/simd-everywhere/simde/archive/refs/tags/v0.8.2.tar.gz",
    ],
)

http_archive(
    name = "spdlog",
    build_file = "//third_party/spdlog:BUILD.overlay.bazel",
    sha256 = "7a80896357f3e8e920e85e92633b14ba0f229c506e6f978578bdc35ba09e9a5d",
    strip_prefix = "spdlog-1.15.2",
    urls = [
        "https://github.com/gabime/spdlog/archive/refs/tags/v1.15.2.tar.gz",
    ],
)

http_archive(
    name = "taskflow",
    build_file = "//third_party/taskflow:BUILD.overlay.bazel",
    sha256 = "788b88093fb3788329ebbf7c7ee05d1f8960d974985a301798df01e77e04233b",
    strip_prefix = "taskflow-3.7.0",
    urls = [
        "https://github.com/taskflow/taskflow/archive/refs/tags/v3.7.0.tar.gz",
    ],
)

http_archive(
    name = "tracy",
    build_file = "//third_party/tracy:BUILD.overlay.bazel",
    sha256 = "171ffc00974781d547eab7732f99ac6d0fc67561d8ba1cba14dc6a8db2bb49a2",
    strip_prefix = "tracy-b3437e6b8bd383af24511db6d82a96e5933b6f64",
    urls = [
        "https://github.com/tenstorrent-metal/tracy/archive/b3437e6b8bd383af24511db6d82a96e5933b6f64.tar.gz",
    ],
)

http_archive(
    name = "tt_logger",
    build_file = "//third_party/tt_logger:BUILD.overlay.bazel",
    sha256 = "9f19f5ade2f9c28397fb58548c14020dd5de394b51b25e468e7af509758f6bff",
    strip_prefix = "tt-logger-1.1.8",
    urls = [
        "https://github.com/tenstorrent/tt-logger/archive/refs/tags/v1.1.8.tar.gz",
    ],
)

http_archive(
    name = "yaml_cpp",
    build_file = "//third_party/yaml_cpp:BUILD.overlay.bazel",
    sha256 = "923b2298148581b14ef21d9ce29d83eca102ff671a547dfdbd227245a199bcd8",
    strip_prefix = "yaml-cpp-2f86d13775d119edbb69af52e5f566fd65c6953b",
    urls = [
        "https://github.com/jbeder/yaml-cpp/archive/2f86d13775d119edbb69af52e5f566fd65c6953b.tar.gz",
    ],
)

http_archive(
    name = "tt_umd",
    build_file = "//third_party/tt_umd:BUILD.overlay.bazel",
    patches = ["//third_party/tt_umd:remove_initial_exec_tls.patch"],
    sha256 = "8f240d2c984ae8b783b935acb5d3b8a79514304187465c594f6d4aec0835ec65",
    strip_prefix = "tt-umd-3d6c4909f06f801b441a78931f0eea9c6619e6e2",
    urls = [
        "https://github.com/tenstorrent/tt-umd/archive/3d6c4909f06f801b441a78931f0eea9c6619e6e2.tar.gz",
    ],
)

http_archive(
    name = "sfpi",
    build_file = "//third_party/sfpi:BUILD.overlay.bazel",
    sha256 = "87acd854b973b571aa754abcfef0afbaebeb9aa456c02aa0eeb783c1a22c0a73",
    strip_prefix = "sfpi",
    urls = [
        "https://github.com/tenstorrent/sfpi/releases/download/7.60.0-shft-39709/sfpi_7.60.0-shft-39709_x86_64_debian.txz",
    ],
)

register_toolchains("@sfpi//:sfpi_cc_toolchain_for_blackhole")

http_archive(
    name = "com_github_google_flatbuffers",
    build_file = "//third_party/flatbuffers:BUILD.overlay.bazel",
    patches = ["//third_party/flatbuffers:src_exports.patch"],
    sha256 = "4157c5cacdb59737c5d627e47ac26b140e9ee28b1102f812b36068aab728c1ed",
    strip_prefix = "flatbuffers-24.3.25",
    urls = [
        "https://github.com/google/flatbuffers/archive/refs/tags/v24.3.25.tar.gz",
    ],
)

http_archive(
    name = "tt_metal",
    build_file = "//third_party/tt_metal:BUILD.overlay.bazel",
    patches = [
        "//third_party/tt_metal:wormhole_build_empty_sources.patch",
        "//third_party/tt_metal:reduce_static_tls.patch",
        "//third_party/tt_metal:disable_fabric_host_tensor_runtime.patch",
        "//third_party/tt_metal:disable_fabric_host_buffer.patch",
        "//third_party/tt_metal:disable_fabric_mesh_device.patch",
        "//third_party/tt_metal:disable_fabric_system_mesh.patch",
        "//third_party/tt_metal:disable_fabric_profiler.patch",
        "//third_party/tt_metal:disable_fabric_rtoptions.patch",
        "//third_party/tt_metal:disable_inspector_runtime.patch",
        "//third_party/tt_metal:noc_debugging_use_public_umd_include.patch",
        "//third_party/tt_metal:fast_bfloat16_bfp8_pack.patch",
        "//third_party/tt_metal:sdpa_decode_allow_l1_interleaved_q.patch",
        "//third_party/tt_metal:layernorm_allow_single_core_height_sharded.patch",
    ],
    sha256 = "6a59d4c18fa7c4ba0da2e0317885e9f556624c3346fb37b976b08875d07d185f",
    strip_prefix = "tt-metal-13adda80c119631d18b0bc06163416ba148c25ab",
    urls = [
        "https://github.com/tenstorrent/tt-metal/archive/13adda80c119631d18b0bc06163416ba148c25ab.tar.gz",
    ],
)

http_archive(
    name = "llvm-raw",
    build_file_content = "# empty\n",
    sha256 = "75dba7f15864c9ddc25dd621dcaf2d325a9ca8f23957ff4eb6b01df5b493b5d5",
    strip_prefix = "llvm-project-f6d0a512972a74ef100723b9526a6a0ddb23f894",
    urls = [
        "https://storage.googleapis.com/mirror.tensorflow.org/github.com/llvm/llvm-project/archive/f6d0a512972a74ef100723b9526a6a0ddb23f894.tar.gz",
        "https://github.com/llvm/llvm-project/archive/f6d0a512972a74ef100723b9526a6a0ddb23f894.tar.gz",
    ],
)

http_archive(
    name = "llvm_zlib",
    build_file = "@llvm-raw//utils/bazel/third_party_build:zlib-ng.BUILD",
    sha256 = "e36bb346c00472a1f9ff2a0a4643e590a254be6379da7cddd9daeb9a7f296731",
    strip_prefix = "zlib-ng-2.0.7",
    urls = [
        "https://github.com/zlib-ng/zlib-ng/archive/refs/tags/2.0.7.zip",
    ],
)

http_archive(
    name = "llvm_zstd",
    build_file = "@llvm-raw//utils/bazel/third_party_build:zstd.BUILD",
    sha256 = "7c42d56fac126929a6a85dbc73ff1db2411d04f104fae9bdea51305663a83fd0",
    strip_prefix = "zstd-1.5.2",
    urls = [
        "https://github.com/facebook/zstd/releases/download/v1.5.2/zstd-1.5.2.tar.gz",
    ],
)

http_archive(
    name = "stablehlo",
    sha256 = "3780e503599ebcc1acc4c96ea5f23c724dae2a4d746ed7d9a01d3f14d879265a",
    strip_prefix = "stablehlo-127d2f238010589ac96f2f402a27afc9dccbb7ab",
    urls = [
        "https://github.com/openxla/stablehlo/archive/127d2f238010589ac96f2f402a27afc9dccbb7ab.zip",
    ],
)

llvm_configure = use_repo_rule("//:bazel/llvm_configure_repo.bzl", "llvm_configure")

llvm_configure(
    name = "llvm-project",
)

git_repository(
    name = "tt_xla_src",
    build_file = "//third_party/tt_xla:tt_xla.BUILD.bazel",
    commit = "9a570e41d499a3a42ddb2117fe4d050f90d732d3",
    patch_args = ["-p1"],
    patches = [
        "//third_party/tt_xla:tt_xla_protobuf_string_view.patch",
        "//third_party/tt_xla:tt_xla_disable_cpu_const_eval.patch",
        "//third_party/tt_xla:tt_xla_disable_trace_global_fp32_acc.patch",
        "//third_party/tt_xla:tt_xla_propagate_mark_roles_through_unary_ops.patch",
        "//third_party/tt_xla:tt_xla_device_memory_stats.patch",
        "//third_party/tt_xla:tt_xla_disable_erase_inverse_ops.patch",
        "//third_party/tt_xla:tt_xla_env_compile_options.patch",
        "//third_party/tt_xla:tt_xla_enable_bf8_activation_dtype_lowering.patch",
    ],
    remote = "https://github.com/tenstorrent/tt-xla.git",
)

git_repository(
    name = "tt_mlir_src",
    build_file = "//third_party/tt_xla:tt_mlir.BUILD.bazel",
    commit = "0427afbec14e5792d0823b6e0ed7849cdf727378",
    patch_args = ["-p1"],
    patches = [
        "//third_party/tt_xla:tt_mlir_string_map_include.patch",
        "//third_party/tt_xla:tt_mlir_pass_option_values.patch",
        "//third_party/tt_xla:tt_mlir_op_model_dependent_static_assert.patch",
        "//third_party/tt_xla:tt_mlir_ttir_to_d2m_constructor_names.patch",
        "//third_party/tt_xla:tt_mlir_affine_passes_include.patch",
        "//third_party/tt_xla:tt_mlir_mock_device_include.patch",
        "//third_party/tt_xla:tt_mlir_disable_ttlang_python_resolver.patch",
        "//third_party/tt_xla:tt_mlir_ttnn_only_register_all.patch",
        "//third_party/tt_xla:tt_mlir_ttnn_only_runtime_paths.patch",
        "//third_party/tt_xla:tt_mlir_strip_sharding_constraints.patch",
        "//third_party/tt_xla:tt_mlir_fast_is_sharded_module.patch",
        "//third_party/tt_xla:tt_mlir_keep_model_state_vectors_tiled.patch",
        "//third_party/tt_xla:tt_mlir_fuse_jax_rms_norm.patch",
        "//third_party/tt_xla:tt_mlir_lower_silu_call.patch",
        "//third_party/tt_xla:tt_mlir_single_chip_activation_dtype_lowering.patch",
        "//third_party/tt_xla:tt_mlir_fuse_rank3_rope_decode.patch",
        "//third_party/tt_xla:tt_mlir_qwen_decode_qkv_projection_fusion.patch",
        "//third_party/tt_xla:tt_mlir_prune_invalid_sharded_matmul_layouts.patch",
        "//third_party/tt_xla:tt_mlir_prune_invalid_sharded_norm_concat_layouts.patch",
        "//third_party/tt_xla:tt_mlir_prune_invalid_decode_cache_layouts.patch",
        "//third_party/tt_xla:tt_mlir_kv_cache_dtype_return_types.patch",
    ],
    remote = "https://github.com/tenstorrent/tt-mlir.git",
)

git_repository(
    name = "shardy",
    commit = "edfd6730ddfc39da5fbea8b6b202357fdf1cdb90",
    patch_args = ["-p1"],
    patches = [
        "//third_party/tt_xla:shardy_bazel8.patch",
        "//third_party/tt_xla:shardy_td_includes.patch",
    ],
    remote = "https://github.com/openxla/shardy.git",
)

git_repository(
    name = "loguru_src",
    build_file = "//third_party/tt_xla:loguru.BUILD.bazel",
    commit = "4adaa185883e3c04da25913579c451d3c32cfac1",
    remote = "https://github.com/emilk/loguru.git",
)
